--- a/src/recipes/templates/recipes/recipe_detail.html
+++ b/src/recipes/templates/recipes/recipe_detail.html
@@ -1,39 +1,39 @@
-{% load static %}
+{% load static %} {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ recipe.name }}</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-</head>
-<body>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+  </head>
+  <body>
     <header>
-        <div class="header-container">
-                <h1>Recipify</h1>
-                <nav>
-                    <ul>
-                        <li><a href="{% url 'recipes:home' %}">Home</a></li>
-                        <li><a href="{% url 'recipes:recipes_list' %}">Recipes</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
+      <div class="header-container">
+        <h1>Recipify</h1>
+        <nav>
+          <ul>
+            <li><a href="{% url 'recipes:home' %}">Home</a></li>
+            <li><a href="{% url 'recipes:recipes_list' %}">Recipes</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
     <main class="recipe-details">
-        <div class="arrow arrow-left">&#10094;</div>
-        <div class="recipe-info">
-            <img src="{{ recipe.pic.url }}" alt="{{ recipe.name }}">
-            <h2>{{ recipe.name }}</h2>
-            <p>Ingredients: {{ recipe.ingredients }}</p>
-            <p>Cooking Time: {{ recipe.cooking_time }}</p>
-            <p>Difficulty: {{ recipe.difficulty }}</p>
-        </div>
-        <div class="arrow arrow-right">&#10095;</div>
+      <div class="arrow arrow-left">&#10094;</div>
+      <div class="recipe-info">
+        <img src="{{ recipe.pic.url }}" alt="{{ recipe.name }}" />
+        <h2>{{ recipe.name }}</h2>
+        <p>Ingredients: {{ recipe.ingredients }}</p>
+        <p>Cooking Time: {{ recipe.cooking_time }}</p>
+        <p>Difficulty: {{ recipe.difficulty }}</p>
+      </div>
+      <div class="arrow arrow-right">&#10095;</div>
     </main>
 
     <footer>
-        <p>&copy; 2024 My Recipe App</p>
+      <p>Recipify, a Django app.</p>
     </footer>
-</body>
+  </body>
 </html>
