--- a/src/recipes/templates/recipes/recipes_list.html
+++ b/src/recipes/templates/recipes/recipes_list.html
@@ -1,38 +1,38 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipes List</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-</head>
-<body>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+  </head>
+  <body>
     <header>
-        <div class="header-container">
-                <h1>Recipify</h1>
-                <nav>
-                    <ul>
-                        <li><a href="{% url 'recipes:home' %}">Home</a></li>
-                        <li><a href="{% url 'recipes:recipes_list' %}">Recipes</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
+      <div class="header-container">
+        <h1>Recipify</h1>
+        <nav>
+          <ul>
+            <li><a href="{% url 'recipes:home' %}">Home</a></li>
+            <li><a href="{% url 'recipes:recipes_list' %}">Recipes</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
     <main class="recipe-grid">
-        {% for recipe in recipes %}
-        <div class="recipe-card">
-            <a href="{% url 'recipes:recipe_detail' recipe.id %}">
-                <img src="{{ recipe.pic.url }}" alt="{{ recipe.name }}">
-                <h2>{{ recipe.name }}</h2>
-            </a>
-        </div>
-        {% endfor %}
+      {% for recipe in recipes %}
+      <div class="recipe-card">
+        <a href="{% url 'recipes:recipe_detail' recipe.id %}">
+          <img src="{{ recipe.pic.url }}" alt="{{ recipe.name }}" />
+          <h2>{{ recipe.name }}</h2>
+        </a>
+      </div>
+      {% endfor %}
     </main>
 
     <footer>
-        <p>&copy; 2024 My Recipe App</p>
+      <p>Recipify, a Django app.</p>
     </footer>
-</body>
+  </body>
 </html>
