--- a/src/recipes/templates/recipes/recipe_detail.html
+++ b/src/recipes/templates/recipes/recipe_detail.html
@@ -25,6 +25,7 @@
       <div class="recipe-info">
         <img src="{{ recipe.pic.url }}" alt="{{ recipe.name }}" />
         <h2>{{ recipe.name }}</h2>
+        <p>Description: {{ recipe.description }}</p>
         <p>Ingredients: {{ recipe.ingredients }}</p>
         <p>Cooking Time: {{ recipe.cooking_time }}</p>
         <p>Difficulty: {{ recipe.difficulty }}</p>
