--- a/src/recipes/templates/recipes/recipe_detail.html
+++ b/src/recipes/templates/recipes/recipe_detail.html
@@ -15,6 +15,7 @@
           <ul>
             <li><a href="{% url 'recipes:home' %}">Home</a></li>
             <li><a href="{% url 'recipes:recipes_list' %}">Recipes</a></li>
+            <li><a href ="{%url 'logout' %}"> Logout </a></li>
           </ul>
         </nav>
       </div>
