--- a/src/templates/auth/success.html
+++ b/src/templates/auth/success.html
@@ -1,14 +1,27 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logout Success</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
+    <header>
+        <div class="header-container">
+          <h1>Recipify</h1>
+        </div>
+      </header>
+
     <h1>You've successfully logged out!</h1>
     <p>Thank you for using our recipe app. We hope to see you again soon!</p>
-    <a href="{% url 'recipes:home' %}">Return to Home</a>
+    <a href="{% url 'recipes:welcome' %}">Return to Home</a>
 
+
+    <footer>
+        <p>Recipify, a Django app.</p>
+      </footer>
 </body>
 </html>
