--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -8,39 +8,48 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f8f8f8;
-  display: flex; /* Use flexbox */
-  flex-direction: column; /* Make the body a column layout */
-  min-height: 100vh; /* Ensure body expands to at least the height of the viewport */
+  font-family: 'Roboto', sans-serif;
+  background-color: #f8f9fa;
+  color: #343a40;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   position: relative;
 }
 
 header, nav, footer {
-  background-color: #333;
+  background-color: #343a40;
   color: #fff;
-  padding: 10px 20px;
+  padding: 20px 40px;
 }
 
 .header-container {
   display: flex;
   justify-content: space-between;
-  align-items: center; /* Align items vertically */
+  align-items: center;
+}
+
+header h1 {
+  font-family: 'Playfair Display', serif;
+  font-size: 2.5rem;
+  font-weight: 700;
 }
 
 nav a {
   text-decoration: none;
   color: #fff;
+  font-weight: 500;
+  font-size: 1.1rem;
 }
 
 nav ul {
   list-style: none;
-  display: flex; /* Use flexbox for nav items */
-  align-items: center; /* Align items vertically */
+  display: flex;
+  align-items: center;
 }
 
 nav ul li {
-  margin-right: 20px;
+  margin-right: 30px;
 }
 
 nav .dropdown {
@@ -50,88 +59,181 @@ nav .dropdown {
 nav .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
-  min-width: 200px;
+  background-color: #fff;
+  min-width: 250px;
   z-index: 1;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   border-radius: 5px;
+  color: #343a40;
+}
+
+nav .dropdown-content form {
+  padding: 20px;
 }
 
 nav .dropdown:hover .dropdown-content {
   display: block;
 }
 
-nav .search-container {
+nav .search-form {
   display: flex;
-  align-items: center;
-  margin-top: 10px;
+  flex-direction: column;
+  gap: 15px;
 }
 
-nav .search-container input[type="text"],
-nav .search-container input[type="number"],
-nav .search-container select {
-  padding: 8px;
-  margin-right: 10px;
+nav .search-form input[type="text"],
+nav .search-form input[type="number"],
+nav .search-form select {
+  padding: 12px;
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 1rem;
 }
 
-nav .search-container .search-btn {
-  background-color: #4CAF50;
+nav .search-form .search-btn {
+  background-color: #007bff;
   color: white;
-  padding: 8px 15px;
+  padding: 10px 20px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  font-size: 1rem;
   transition: background-color 0.3s ease;
 }
 
-nav .search-container .search-btn:hover {
-  background-color: #45a049;
+nav .search-form .search-btn:hover {
+  background-color: #0056b3;
 }
 
 main {
-  padding: 20px;
-  flex-grow: 1; /* Allow main content to grow and occupy remaining space */
+  padding: 40px 20px;
+  flex-grow: 1;
 }
 
-/* Welcome Content */
-.welcome-content {
-  text-align: center;
-  padding: 50px 20px;
-  background-color: #f2f2f2;
+.content-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #ffffff;
   border-radius: 10px;
-  margin: 50px auto;
-  max-width: 600px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-.welcome-content h1 {
-  color: #333;
+.content-container h1 {
+  font-family: 'Playfair Display', serif;
   font-size: 2.5rem;
   margin-bottom: 20px;
 }
 
-.welcome-content p {
-  color: #666;
+.results-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 30px;
+}
+
+.results-table th,
+.results-table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+.results-table th {
+  background-color: #343a40;
+  color: white;
+}
+
+.results-table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.results-table tr:hover {
+  background-color: #ddd;
+}
+
+.chart-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.chart-container img {
+  max-width: 100%;
+  height: auto;
+  margin: 10px;
+}
+
+.about-content {
+  text-align: center;
+  padding: 60px 20px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  margin: 50px auto;
+  max-width: 800px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.about-content h1 {
+  font-family: 'Playfair Display', serif;
+  font-size: 2.5rem;
+  color: #343a40;
+  margin-bottom: 20px;
+}
+
+.about-content p {
+  color: #6c757d;
   font-size: 1.2rem;
   line-height: 1.6;
   margin-bottom: 30px;
 }
 
-.login-btn {
-  display: inline-block;
-  background-color: #4CAF50;
-  color: white;
-  padding: 10px 20px;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
+/* Featured Recipes */
+.featured-recipes {
+  margin: 40px auto;
+  text-align: center;
 }
 
-.login-btn:hover {
-  background-color: #45a049;
+.featured-recipes h2 {
+  font-family: 'Playfair Display', serif;
+  font-size: 2rem;
+  margin-bottom: 20px;
+  color: #343a40;
+}
+
+.featured-recipes .recipe-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+.featured-recipes .recipe-card {
+  border: 1px solid #dee2e6;
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.featured-recipes .recipe-card:hover {
+  transform: translateY(-5px);
+}
+
+.featured-recipes .recipe-card a {
+  display: block;
+  text-decoration: none;
+  color: #343a40;
+}
+
+.featured-recipes .recipe-card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.featured-recipes .recipe-card h3 {
+  padding: 10px;
+  text-align: center;
+  margin: 0;
 }
 
 /* Recipe List Page */
@@ -176,12 +278,35 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 20px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  margin: 40px auto;
+  max-width: 1200px;
 }
 
 .recipe-info {
   flex-grow: 1;
   padding: 20px;
   text-align: center;
+}
+
+.recipe-info img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.recipe-info h2 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+.recipe-info p {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
 }
 
 .arrow {
@@ -236,8 +361,7 @@ form input[type="password"] {
   font-size: 1rem;
 }
 
-form button.login-btn,
-.search-btn {
+form button.login-btn {
   background-color: #4CAF50;
   color: white;
   padding: 10px 20px;
@@ -247,89 +371,89 @@ form button.login-btn,
   transition: background-color 0.3s ease;
 }
 
-form button.login-btn:hover,
-.search-btn:hover {
+form button.login-btn:hover {
   background-color: #45a049;
 }
 
-/* Recipes Home Page */
-.search-form {
+/* Welcome Content */
+.welcome-content {
+  text-align: center;
+  padding: 50px 20px;
+  background-color: #f2f2f2;
+  border-radius: 10px;
+  margin: 50px auto;
+  max-width: 600px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.welcome-content h1 {
+  color: #333;
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+}
+
+.welcome-content p {
+  color: #666;
+  font-size: 1.2rem;
+  line-height: 1.6;
+  margin-bottom: 30px;
+}
+
+.login-btn {
+  display: inline-block;
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.login-btn:hover {
+  background-color: #45a049;
+}
+
+/* Success Page */
+.content-container {
   max-width: 800px;
-  margin: 20px auto;
-  padding: 20px;
-  background-color: #fff;
+  margin: 50px auto;
+  padding: 40px;
+  background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  display: flex;
-  justify-content: center; /* Center items horizontally */
-  align-items: center; /* Center items vertically */
-  flex-wrap: wrap;
-}
-
-.search-container {
-  margin: 10px;
-}
-
-.search-form label {
-  display: block;
-  margin-bottom: 5px;
-}
-
-.search-form input[type="text"],
-.search-form input[type="number"],
-.search-form select {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 1rem;
-}
-
-/* Featured Recipes */
-.featured-recipes {
-  margin: 40px auto;
   text-align: center;
 }
 
-.featured-recipes .recipe-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
+.content-container h1 {
+  font-family: 'Playfair Display', serif;
+  font-size: 2.5rem;
+  margin-bottom: 20px;
 }
 
-.featured-recipes .recipe-card {
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  overflow: hidden;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
+.content-container p {
+  font-size: 1.2rem;
+  color: #6c757d;
+  line-height: 1.6;
+  margin-bottom: 30px;
 }
 
-.featured-recipes .recipe-card:hover {
-  transform: translateY(-5px);
-}
-
-.featured-recipes .recipe-card a {
-  display: block;
+.login-btn {
+  display: inline-block;
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
   text-decoration: none;
-  color: #333;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
 }
 
-.featured-recipes .recipe-card img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-.featured-recipes .recipe-card h3 {
-  padding: 10px;
-  text-align: center;
-  margin: 0;
+.login-btn:hover {
+  background-color: #45a049;
 }
 
 /* Footer */
 footer {
-  background-color: #333;
+  background-color: #343a40;
   color: #fff;
   text-align: center;
   padding: 10px 0;
