--- a/src/recipes/templates/recipes/recipe_detail.html
+++ b/src/recipes/templates/recipes/recipe_detail.html
@@ -15,14 +15,14 @@
                 <ul>
                     <li><a href="{% url 'recipes:home' %}">Home</a></li>
                     <li><a href="{% url 'recipes:recipes_list' %}">Recipes</a></li>
-                    <li><a href="{%url 'logout' %}">Logout</a></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <main class="recipe-details">
-        <div class="arrow arrow-left">&#10094;</div>
+        <div class="arrow arrow-left" onclick="navigateRecipe('{{ prev_recipe_id }}')">&#10094;</div>
         <div class="recipe-info">
             <img src="{{ recipe.pic.url }}" alt="{{ recipe.name }}" />
             <h2>{{ recipe.name }}</h2>
@@ -31,11 +31,17 @@
             <p><strong>Cooking Time:</strong> {{ recipe.cooking_time }}</p>
             <p><strong>Difficulty:</strong> {{ recipe.difficulty }}</p>
         </div>
-        <div class="arrow arrow-right">&#10095;</div>
+        <div class="arrow arrow-right" onclick="navigateRecipe('{{ next_recipe_id }}')">&#10095;</div>
     </main>
 
     <footer>
         <p>Recipify, a Django app.</p>
     </footer>
+
+    <script>
+        function navigateRecipe(recipeId) {
+            window.location.href = `/recipes/recipes/${recipeId}/`;
+        }
+    </script>
 </body>
 </html>
