--- a/src/recipes/templates/recipes/recipes_list.html
+++ b/src/recipes/templates/recipes/recipes_list.html
@@ -21,17 +21,24 @@
         </div>
     </header>
 
+
     <div class="search-container">
         <form method="GET" action="{% url 'recipes:search_results' %}">
             {% csrf_token %}
-            <input type="text" name="query" id="id_query" placeholder="Search recipes...">
-            <input type="number" name="cooking_time" id="id_cooking_time" placeholder="Cooking time (minutes)">
-            <select name="difficulty" id="id_difficulty">
-                <option value="" selected disabled>Select difficulty</option>
-                <option value="Easy">Easy</option>
-                <option value="Medium">Medium</option>
-                <option value="Hard">Hard</option>
-            </select>
+            <div class="form-group">
+                <input type="text" name="query" id="id_query" placeholder="Search recipes..." class="search-input">
+            </div>
+            <div class="form-group">
+                <input type="number" name="cooking_time" id="id_cooking_time" placeholder="Cooking time (minutes)" class="search-input">
+            </div>
+            <div class="form-group">
+                <select name="difficulty" id="id_difficulty" class="search-select">
+                    <option value="" selected disabled>Select difficulty</option>
+                    <option value="Easy">Easy</option>
+                    <option value="Medium">Medium</option>
+                    <option value="Hard">Hard</option>
+                </select>
+            </div>
             <button type="submit" class="search-btn">Search</button>
         </form>
     </div>
