--- a/recipes/templates/recipes/recipes_list.html
+++ b/recipes/templates/recipes/recipes_list.html
@@ -14,6 +14,7 @@
             <nav>
                 <ul>
                     <li><a href="{% url 'recipes:home' %}">Home</a></li>
+                    <li><a href="{% url 'recipes:about' %}">About</a></li>
                     <li><a href="{% url 'recipes:recipes_list' %}">Recipes</a></li>
                     <li><a href="{% url 'recipes:add_recipe' %}">Create</a></li>
                     <li><a href="{% url 'logout' %}">Logout</a></li>
