updated procfile and added login note for employers

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -552,7 +552,7 @@ form button.login-btn:hover {
 }
 
 .content-container h1 {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 2.5rem;
   margin-bottom: 20px;
 }
