--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -28,11 +28,17 @@
 
                 <button type="submit" class="login-btn">Login</button>
             </form>
+            <small>If you are a prospective employer, check the console!</small>
         </div>
     </main>
 
     <footer>
         <p>Recipify, a Django app.</p>
     </footer>
+
+    <script>
+        console.log("Username: Username123")
+        console.log("Password: Password123")
+    </script>
 </body>
 </html>
