--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -496,6 +496,49 @@ form button.login-btn:hover {
   background-color: #45a049;
 }
 
+/** About Page **/
+.about-me {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.6;
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.about-me h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.about-me section {
+  margin-bottom: 20px;
+}
+
+.about-me h3 {
+  margin-top: 20px;
+  color: #555;
+  border-bottom: 2px solid #eee;
+  padding-bottom: 10px;
+}
+
+.about-me p {
+  margin-bottom: 10px;
+  color: #666;
+}
+
+.about-me a {
+  color: #007BFF;
+  text-decoration: none;
+}
+
+.about-me a:hover {
+  text-decoration: underline;
+}
 
 /* Success Page */
 .content-container {
@@ -509,7 +552,7 @@ form button.login-btn:hover {
 }
 
 .content-container h1 {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 2.5rem;
   margin-bottom: 20px;
 }
@@ -533,6 +576,10 @@ form button.login-btn:hover {
 
 .login-btn:hover {
   background-color: #45a049;
+}
+
+small {
+  margin-top: 10px;
 }
 
 /* Footer */
