Updated sudo user

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -38,7 +38,7 @@
 
     <script>
         console.log("Username: Username123")
-        console.log("Password: Password123")
+        console.log("Password: @BCD12345")
     </script>
 </body>
 </html>
