--- a/recipes/templates/recipes/add_recipe.html
+++ b/recipes/templates/recipes/add_recipe.html
@@ -1,63 +1,78 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add Recipe</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-</head>
-<body>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+  </head>
+  <body>
     <header>
-        <div class="header-container">
-            <h1>Recipify</h1>
-            <nav>
-                <ul>
-                    <li><a href="{% url 'recipes:home' %}">Home</a></li>
-                    <li><a href="{% url 'recipes:recipes_list' %}">Recipes</a></li>
-                    <li><a href="{% url 'recipes:add_recipe' %}">Create</a></li>
-                    <li><a href="{% url 'logout' %}">Logout</a></li>
-                </ul>
-            </nav>
+      <div class="header-container">
+        <h1>Recipify</h1>
+        <div class="hamburger-menu" onclick="toggleMenu()">
+          &#9776;
+          <!-- Hamburger icon -->
         </div>
+      </div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="{% url 'recipes:home' %}">Home</a></li>
+          <li><a href="{% url 'recipes:about' %}">About</a></li>
+          <li><a href="{% url 'recipes:recipes_list' %}">Recipes</a></li>
+          <li><a href="{% url 'recipes:add_recipe' %}">Create</a></li>
+          <li><a href="{% url 'logout' %}">Logout</a></li>
+        </ul>
+      </nav>
     </header>
+
     <main>
-        <div class="add-recipe-container">
-            <h2>Add a New Recipe</h2>
-            <form method="post" enctype="multipart/form-data" class="add-recipe-form">
-                {% csrf_token %}
-                <div class="form-group">
-                    {{ form.name.label_tag }}
-                    {{ form.name }}
-                </div>
-                <div class="form-group">
-                    {{ form.description.label_tag }}
-                    {{ form.description }}
-                </div>
-                <div class="form-group">
-                    {{ form.ingredients.label_tag }}
-                    {{ form.ingredients }}
-                    <span class="instructions">(e.g., Sugar, Whipped Cream, Milk, Baking Powder )</span>
-                </div>
-                <div class="form-group">
-                    {{ form.cooking_time.label_tag }}
-                    {{ form.cooking_time }}
-                </div>
-                <div class="form-group">
-                    {{ form.difficulty.label_tag }}
-                    {{ form.difficulty }}
-                    <span class="instructions">Easy, Medium, Intermediate, or Hard</span>
-                </div>
-                <div class="form-group file-input-wrapper">
-                    {{ form.pic.label_tag }}
-                    {{ form.pic }}
-                </div>
-                <button type="submit">Add Recipe</button>
-            </form>
-        </div>
+      <div class="add-recipe-container">
+        <h2>Add a New Recipe</h2>
+        <form
+          method="post"
+          enctype="multipart/form-data"
+          class="add-recipe-form"
+        >
+          {% csrf_token %}
+          <div class="form-group">
+            {{ form.name.label_tag }} {{ form.name }}
+          </div>
+          <div class="form-group">
+            {{ form.description.label_tag }} {{ form.description }}
+          </div>
+          <div class="form-group">
+            {{ form.ingredients.label_tag }} {{ form.ingredients }}
+            <span class="instructions"
+              >(e.g., Sugar, Whipped Cream, Milk, Baking Powder )</span
+            >
+          </div>
+          <div class="form-group">
+            {{ form.cooking_time.label_tag }} {{ form.cooking_time }}
+          </div>
+          <div class="form-group">
+            {{ form.difficulty.label_tag }} {{ form.difficulty }}
+            <span class="instructions"
+              >Easy, Medium, Intermediate, or Hard</span
+            >
+          </div>
+          <div class="form-group file-input-wrapper">
+            {{ form.pic.label_tag }} {{ form.pic }}
+          </div>
+          <button type="submit">Add Recipe</button>
+        </form>
+      </div>
     </main>
     <footer>
-        <p>Recipify, a Django app.</p>
+      <p>Recipify, a Django app.</p>
     </footer>
-</body>
+
+    <script>
+      function toggleMenu() {
+        const navLinks = document.querySelector(".nav-links");
+        navLinks.classList.toggle("active");
+      }
+    </script>
+  </body>
 </html>
