--- a/recipes/templates/recipes/recipes_list.html
+++ b/recipes/templates/recipes/recipes_list.html
@@ -1,66 +1,88 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipes List</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-</head>
-<body>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+  </head>
+  <body>
     <header>
-        <div class="header-container">
-            <h1>Recipify</h1>
-            <nav>
-                <ul>
-                    <li><a href="{% url 'recipes:home' %}">Home</a></li>
-                    <li><a href="{% url 'recipes:about' %}">About</a></li>
-                    <li><a href="{% url 'recipes:recipes_list' %}">Recipes</a></li>
-                    <li><a href="{% url 'recipes:add_recipe' %}">Create</a></li>
-                    <li><a href="{% url 'logout' %}">Logout</a></li>
-                </ul>
-            </nav>
+      <div class="header-container">
+        <h1>Recipify</h1>
+        <div class="hamburger-menu" onclick="toggleMenu()">
+          &#9776;
+          <!-- Hamburger icon -->
         </div>
+      </div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="{% url 'recipes:home' %}">Home</a></li>
+          <li><a href="{% url 'recipes:about' %}">About</a></li>
+          <li><a href="{% url 'recipes:recipes_list' %}">Recipes</a></li>
+          <li><a href="{% url 'recipes:add_recipe' %}">Create</a></li>
+          <li><a href="{% url 'logout' %}">Logout</a></li>
+        </ul>
+      </nav>
     </header>
 
-
     <div class="search-container">
-        <form method="GET" action="{% url 'recipes:search_results' %}">
-            {% csrf_token %}
-            <div class="form-group">
-                <input type="text" name="query" id="id_query" placeholder="Search recipes..." class="search-input">
-            </div>
-            <div class="form-group">
-                <input type="number" name="cooking_time" id="id_cooking_time" placeholder="Cooking time (minutes)" class="search-input">
-            </div>
-            <div class="form-group">
-                <select name="difficulty" id="id_difficulty" class="search-select">
-                    <option value="" selected disabled>Select difficulty</option>
-                    <option value="Easy">Easy</option>
-                    <option value="Medium">Medium</option>
-                    <option value="Intermediate">Intermediate</option>
-                    <option value="Hard">Hard</option>
-                </select>
-            </div>
-            <button type="submit" class="search-btn">Search</button>
-        </form>
+      <form method="GET" action="{% url 'recipes:search_results' %}">
+        {% csrf_token %}
+        <div class="form-group">
+          <input
+            type="text"
+            name="query"
+            id="id_query"
+            placeholder="Search recipes..."
+            class="search-input"
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="number"
+            name="cooking_time"
+            id="id_cooking_time"
+            placeholder="Cooking time (minutes)"
+            class="search-input"
+          />
+        </div>
+        <div class="form-group">
+          <select name="difficulty" id="id_difficulty" class="search-select">
+            <option value="" selected disabled>Select difficulty</option>
+            <option value="Easy">Easy</option>
+            <option value="Medium">Medium</option>
+            <option value="Intermediate">Intermediate</option>
+            <option value="Hard">Hard</option>
+          </select>
+        </div>
+        <button type="submit" class="search-btn">Search</button>
+      </form>
     </div>
 
     <div class="recipe-container">
-        <main class="recipe-grid">
-            {% for recipe in recipes %}
-            <div class="recipe-card">
-                <a href="{% url 'recipes:recipe_detail' recipe.id %}">
-                    <img src="{{ recipe.pic.url }}" alt="{{ recipe.name }}" />
-                    <h3>{{ recipe.name }}</h3>
-                </a>
-            </div>
-            {% endfor %}
-        </main>
+      <main class="recipe-grid">
+        {% for recipe in recipes %}
+        <div class="recipe-card">
+          <a href="{% url 'recipes:recipe_detail' recipe.id %}">
+            <img src="{{ recipe.pic.url }}" alt="{{ recipe.name }}" />
+            <h3>{{ recipe.name }}</h3>
+          </a>
+        </div>
+        {% endfor %}
+      </main>
     </div>
 
     <footer>
-        <p>Recipify, a Django app.</p>
+      <p>Recipify, a Django app.</p>
     </footer>
-</body>
+
+    <script>
+      function toggleMenu() {
+        const navLinks = document.querySelector(".nav-links");
+        navLinks.classList.toggle("active");
+      }
+    </script>
+  </body>
 </html>
