--- a/recipes/templates/recipes/search_results.html
+++ b/recipes/templates/recipes/search_results.html
@@ -11,18 +11,21 @@
     <header>
         <div class="header-container">
             <h1>Recipify</h1>
-            <nav>
-                <ul>
-                    <li><a href="{% url 'recipes:home' %}">Home</a></li>
-                    <li><a href="{% url 'recipes:about' %}">About</a></li>
-                    <li><a href="{% url 'recipes:recipes_list' %}">Recipes</a></li>
-                    <li><a href="{% url 'recipes:add_recipe' %}">Create</a></li>
-                    <li><a href="{%url 'logout' %}">Logout</a></li>
-                </ul>
-            </nav>
+            <div class="hamburger-menu" onclick="toggleMenu()">
+                &#9776; <!-- Hamburger icon -->
+            </div>
         </div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="{% url 'recipes:home' %}">Home</a></li>
+                <li><a href="{% url 'recipes:about' %}">About</a></li>
+                <li><a href="{% url 'recipes:recipes_list' %}">Recipes</a></li>
+                <li><a href="{% url 'recipes:add_recipe' %}">Create</a></li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+            </ul>
+        </nav>
     </header>
-
+    
     
     <div class="search-container">
         <form method="GET" action="{% url 'recipes:search_results' %}">
