Changed about page error

--- a/recipes/templates/recipes/about.html
+++ b/recipes/templates/recipes/about.html
@@ -54,7 +54,7 @@
       </p>
       <p>
         I am proficient in various frameworks and libraries, including React,
-        Node.js, and Django. These tools have enabled me to build dynamic and
+        Angular, and Django. These tools have enabled me to build dynamic and
         responsive applications. I am a continuous learner, always eager to stay
         abreast of the latest technologies and trends in the web development
         world. Tackling new challenges and working on innovative projects
